small fix in MetadataExtractorReader.java